# di-ocr

./: .env  pyproject.toml  wsgi.py
app/: __init__.py  config.py  core.py  route.py
